Thu Nov 30 11:19:56 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_move_word): Fix stupid
	bug causing extra word movement backwards. (#15282, Marco Goetze)

Wed Nov 29 21:47:26 2000  Owen Taylor  <otaylor@redhat.com>

        [ Backport from 1.3.x ]

	* gtk/gtktoolbar.c (gtk_toolbar_prepend_widget): Fix to
	prepend not append. (Pointed out by Brett Hall.)
	#11887.

Wed Nov 29 20:56:38 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.[ch] (gtk_widget_is_ancestor): Change
	return type to boolean (Oskar Liljeblad, #18648)

Wed Nov 29 20:44:09 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkclist.c (gtk_clist_get_pixtext): Allow mask to 
	be NULL. (Vladimir Klebanov, #26545)

Thu Oct 26 02:10:32 2000  Tim Janik  <timj@gtk.org>

        [ Backport from 1.3 / otaylor, 29 Nov 2000 ]
	
	* gtk/Makefile.am: invoke maketypes.awk with LC_ALL=C to avoid
	localization misbehaviour.

2000-11-29  Martin Baulig  <baulig@suse.de>

	* *.pc.in: Make the pkg-config scripts actually work.

2000-11-27  Federico Mena Quintero  <federico@helixcode.com>

	* gtk/gtkspinbutton.c (gtk_spin_button_set_adjustment): Connect to
	the "changed" callback of the adjustment.  We need to redraw the
	spin button's arrows when the adjustment's range changes.
	(adjustment_changed_cb): Draw the arrows.
	(gtk_spin_button_value_changed): Draw the arrows.

Sat Nov 18 11:56:39 2000  Owen Taylor  <otaylor@redhat.com>

	[ backport from 1.3.x ] 

	* gdk/gdkrgb.c: If possible, create only a single shm segment and
	use multiple parts of it instead of creating a bunch of separate
	segments, since the maximum number of segments per system is not
	large.

	* gdk/x11/gdkimage-x11.c (gdk_image_new): Don't set gdk_use_xshm
	to False when we get EINVAL from shmget so that the caller of
	gdk_image_new can retry with a smaller segment size.

Sat Nov 18 11:45:09 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcalendar.c: Patch from ChiDeok Hwang to fix
	memleaks found by Evan Martin.
